tests/fixtures/invalid/array_length_comma_expression.c
int main(void) {
    int values[1, 2];
    return values[0];
}
